@@ -1,4 +1,4 @@
-/* $Id: menubar.c,v 1.4 2005-01-24 22:19:10 schaffner Exp $ */
+/* $Id: menubar.c,v 1.5 2005-01-25 21:33:06 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -13,7 +13,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 */
 
 #ifdef RCS
-static char rcsid[] = "$Id: menubar.c,v 1.4 2005-01-24 22:19:10 schaffner Exp $";
+static char rcsid[] = "$Id: menubar.c,v 1.5 2005-01-25 21:33:06 schaffner Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -264,7 +264,7 @@ void menu_hide_all()
 }
 
 
-static state2_alt_down;
+static int state2_alt_down;
 
 void do_state_0( int keypress )
 {
