@@ -19,6 +19,7 @@
 	* ui/inputbox.c, ui/keypad.c: use unsigned char when comparing to > 127
 	* ui/mouse.c, file ui/popup.c, ui/window.c: comment out uses of
 	mouse_set_limits and mouse_set_pos (we don't want to limit user)
+	* ui/menubar.c: specify int type for state2_alt_down
 	
 2005-01-24  Chris Taylor  <c.taylor@student.curtin.edu.au>
 
